# va-decision-test

./: .env.example  .gitignore  ADMIN_DASHBOARD.md  API_QUICKSTART.md  CLAUDE.md  COMPLETE_SUMMARY.md  DASHBOARD.md  DASHBOARD_GUIDE.md  Dockerfile  FASTAPI_CONVERSION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OBSERVABILITY.md  OBSERVABILITY_TEST_RESULTS.md  README.md  SCALING_GUIDE.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
api/: README.md  __init__.py  admin.html  agent_runtime.py  agent_services.py  dashboard.html  main.py  middleware.py  models.py  observability.py  services.py  test_client.py
data/: selection.json
docs/: LEGALBENCH_ENHANCEMENTS.md  QUICK_REFERENCE.md  USAGE_EXAMPLES.md
docs/plans/: 2026-01-29-100-decision-test-design.md  2026-01-29-100-decision-test-implementation.md
scripts/: ingest.py  migrate_add_scores.py  scale_direct.py  scale_to_100.py  score_issues.py  test_scale.py  test_scale_direct.py  validate.py  validate_reasoning.py
src/: scoring.py
src/db/: connection.py  schema.sql
src/extraction/: gemini.py  models.py
src/fetcher/: balanced_selector.py  parser.py  search.py  selector.py
src/graph/: loader.py
src/queries/: q1_similar.py  q2_evidence_chain.py  q3_denial_why.py  q4_evidence_diff.py  q5_authority_stats.py
tests/: test_db.py  test_extraction.py  test_fetcher.py  test_loader.py  test_queries.py  test_selector.py
